--- a/auth/index.html
+++ b/auth/index.html
@@ -154,9 +154,9 @@
             <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
 
             <div class="flex flex-row">
-              <div class="relative mt-4">
+              <div class="relative flex flex-col justify-center pt-[16px]">
                 <img
-                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px]"
+                  class="w-[30px] h-[32px] md:w-[40px] md:h-[40px]"
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
@@ -174,7 +174,7 @@
             </div>
 
             <div class="flex flex-row">
-              <div class="mt-4 md:mt-[12px] w-[30px] relative">
+              <div class="pt-[5px] flex flex-col justify-center relative">
                 <img
                   class="w-[32px] h-[30px] md:w-[42px] md:h-[36px] lg:w-[42px] lg:h-[36px] xl:w-[42px] xl:h-[36px]"
                   src="/images/icons8-password-50.png"
@@ -258,7 +258,7 @@
                   />
                 </div>
               </div>
-              <!-- Bio -->
+
               <div class="flex flex-col w-full">
                 <label class="gold-labels" for="bio">Bio</label>
                 <textarea
@@ -268,7 +268,7 @@
                   maxlength="160"
                 ></textarea>
               </div>
-              <!-- Avatar URL -->
+
               <div class="flex flex-col w-full">
                 <label class="gold-labels" for="avatarUrl">Avatar url</label>
                 <input
@@ -279,7 +279,7 @@
                   pattern="https?://.+"
                 />
               </div>
-              <!-- Avatar Alt -->
+
               <div class="flex flex-col w-full">
                 <label class="gold-labels" for="avatarAlt">Avatar alt</label>
                 <input
@@ -290,7 +290,7 @@
                   maxlength="120"
                 />
               </div>
-              <!-- Banner URL -->
+
               <div class="flex flex-col w-full">
                 <label class="gold-labels" for="bannerUrl">Banner url</label>
                 <input
@@ -301,7 +301,7 @@
                   pattern="https?://.+"
                 />
               </div>
-              <!-- Banner Alt -->
+
               <div class="flex flex-col w-full">
                 <label class="gold-labels" for="bannerAlt">Banner alt</label>
                 <input
@@ -312,7 +312,7 @@
                   maxlength="120"
                 />
               </div>
-              <!-- Register Button -->
+
               <div class="flex-row-center">
                 <button
                   class="button-styles pt-2 pb-2 pl-2 pr-2 md:pt-1 md:pb-1 mt-4"
