updated icons sign in page

--- a/auth/index.html
+++ b/auth/index.html
@@ -153,10 +153,10 @@
           >
             <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
 
-            <div class="flex flex-row">
+            <div class="flex flex-row items-center">
               <div class="relative flex flex-col justify-center pt-[16px]">
                 <img
-                  class="w-[30px] h-[32px] md:w-[40px] md:h-[40px]"
+                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px]"
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
@@ -173,7 +173,7 @@
               </div>
             </div>
 
-            <div class="flex flex-row">
+            <div class="flex flex-row items-center">
               <div class="pt-[5px] flex flex-col justify-center relative">
                 <img
                   class="w-[32px] h-[30px] md:w-[42px] md:h-[36px] lg:w-[42px] lg:h-[36px] xl:w-[42px] xl:h-[36px]"
