fixed login form icons

--- a/auth/index.html
+++ b/auth/index.html
@@ -153,10 +153,10 @@
           >
             <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
 
-            <div class="flex flex-row items-center">
-              <div class="relative flex flex-col justify-center pt-[16px]">
+            <div class="flex flex-row items-end justify-center ">
+              <div class=" flex flex-row h-[20px] items-end justify-center">
                 <img
-                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px]"
+                  class="w-[40px] h-[34px] md:w-[40px] md:h-[40px]"
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
@@ -173,8 +173,8 @@
               </div>
             </div>
 
-            <div class="flex flex-row items-center">
-              <div class="pt-[5px] flex flex-col justify-center relative">
+            <div class="flex flex-row items-end justify-center">
+              <div class="flex flex-col h-[40px] items-center justify-center">
                 <img
                   class="w-[32px] h-[30px] md:w-[42px] md:h-[36px] lg:w-[42px] lg:h-[36px] xl:w-[42px] xl:h-[36px]"
                   src="/images/icons8-password-50.png"
