--- a/auth/index.html
+++ b/auth/index.html
@@ -154,9 +154,9 @@
             <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
 
             <div class="flex flex-row items-end justify-center ">
-              <div class=" flex flex-row h-[20px] items-end justify-center">
+              <div class=" flex flex-row items-center justify-center">
                 <img
-                  class="w-[40px] h-[34px] md:w-[40px] md:h-[40px]"
+                  class="w-[40px] h-[34px] md:w-[50px] md:h-[40px] lg:w-[50px] lg:h-[40px] xl:w-[50px] xl:h-[40px]"
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
